<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="#fff"
    android:padding="4dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:src="@drawable/user1"
        app:civ_border_width="2dp"
        app:civ_border_color="#FFCCCCCC"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/userId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/userId"
            android:textSize="10dp"
            android:textStyle="bold"
            android:textColor="#000000"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updateTime"
                android:textSize="10dp"
                android:layout_gravity="center"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="5"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recommend"
                android:textColor="#000"
                android:textSize="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="#000"
                android:textSize="10dp"
                android:layout_marginLeft="8dp"/>
            <Button
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/report"
                android:textSize="10dp"
                android:layout_marginLeft="8dp"
                android:background="#fff"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>