<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background1"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_margin="8dp"
            android:src="@drawable/image_gundo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/name"
                    android:textColor="#ffffff" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/ic_15" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="#ffffff" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/likeBtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_thumb_up"/>

                <TextView
                    android:id="@+id/likeCountView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="1"
                    android:textColor="#ffffff" />

                <Button
                    android:id="@+id/unlikeBtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/ic_thumb_down"/>

                <TextView
                    android:id="@+id/unlikeCountView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:text="1"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="예매율" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="5위 1.8%" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="평점" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_weight="1">

                <RatingBar
                    style="@style/Base.Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:rating="4.5"
                    android:stepSize="10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8.2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="누적관객수" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="839,399명" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="줄거리"
                android:textSize="16sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:background="@android:color/background_light"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="4dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/story"
                android:background="@android:color/background_light"
                android:padding="8dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="감독/출연"
                android:textSize="16sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:background="@android:color/background_light"
                android:layout_marginTop="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp"/>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingLeft="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="감독"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="윤종빈"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_marginLeft="8dp"/>
                <TextView/>
                <TextView/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:paddingTop="4dp"
                android:paddingBottom="8dp"
                android:paddingLeft="4dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="출연"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="하정우(도치),"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_marginLeft="8dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="강동원(조윤)"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:layout_marginLeft="8dp"/>
                <TextView/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:paddingTop="8dp"
                android:paddingBottom="4dp"
                android:layout_marginTop="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="한줄평"
                    android:textSize="16sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:paddingLeft="4dp"
                    android:layout_weight="2"/>
                <TextView/>
                <Button
                    android:id="@+id/writeCommentBtn"
                    android:text="작성하기"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textColor="@android:color/holo_orange_dark"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:background="@android:color/background_light"
                    android:gravity="left"
                    android:drawableLeft="@drawable/ic_review_selected" />
            </TableRow>
            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="180dp" />
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@android:color/background_light">
                <Button
                    android:id="@+id/viewAllCommentBtn"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="모두 보기"
                    android:textColor="@android:color/holo_purple"
                    android:textStyle="bold"
                    android:background="@drawable/rectangle_border"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/background_light">
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_facebook"
                    android:scaleType="fitCenter"
                    android:background="@android:color/background_light"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>
                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_kakao"
                    android:scaleType="fitCenter"
                    android:background="@android:color/background_light"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>
                <Button
                    android:text="예매하기"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:textColor="@android:color/background_light"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:background="@android:color/holo_orange_dark"
                    android:layout_weight="6" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>
